ch44/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: kubebook-ch44-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: web
          image: registry.k8s.io/e2e-test-images/agnhost:2.53
          args: ["netexec", "--http-port=8080"]
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: kubebook-ch44-web
spec:
  selector:
    app: web
  ports:
    - port: 80
      targetPort: 8080
---
apiVersion: v1
kind: Pod
metadata:
  name: client
  namespace: kubebook-ch44-web
spec:
  terminationGracePeriodSeconds: 1
  containers:
    - name: client
      image: curlimages/curl:8.17.0
      command: ["sleep", "3600"]
