ch44/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web
  namespace: kubebook-ch44-web
spec:
  ingressClassName: traefik
  rules:
    - host: web.kubebook.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 80
